xotl/fl/parsers/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    KEYWORD_CLASS
    KEYWORD_INSTANCE

Grammar

Rule 0     S' -> program
Rule 1     expr_factor -> expr_factor SPACE expr_factor
Rule 2     expr_term9 -> expr_factor infixr_operator_9 expr_term9
Rule 3     expr_term9 -> expr_factor
Rule 4     expr_term7 -> expr_term7 infixl_operator_7 expr_term9
Rule 5     expr_term7 -> expr_term9
Rule 6     expr_term6 -> expr_term6 infixl_operator_6 expr_term7
Rule 7     expr_term6 -> expr_term7
Rule 8     expr_term2 -> expr_term2 infixl_operator_2 expr_term6
Rule 9     expr_term2 -> expr_term6
Rule 10    expr_term1 -> expr_term2 infixr_operator_2 expr_term1
Rule 11    expr_term1 -> expr_term2
Rule 12    expr_term0 -> expr infixl_operator_0 expr_term0
Rule 13    expr_term0 -> expr_term1
Rule 14    st_expr -> expr
Rule 15    expr -> expr_term0
Rule 16    expr_factor -> literal
Rule 17    expr_factor -> identifier
Rule 18    expr_factor -> enclosed_expr
Rule 19    expr_factor -> letexpr
Rule 20    expr_factor -> where_expr
Rule 21    expr_factor -> lambda_expr
Rule 22    expr_factor -> simple_list_expr
Rule 23    expr_factor -> simple_tuple_expr
Rule 24    st_type_expr -> type_expr
Rule 25    literal -> number
Rule 26    literal -> concrete_number
Rule 27    literal -> string
Rule 28    literal -> char
Rule 29    literal -> date
Rule 30    literal -> datetime
Rule 31    literal -> date_interval
Rule 32    literal -> datetime_interval
Rule 33    simple_tuple_expr -> LPAREN _list_items RPAREN
Rule 34    simple_list_expr -> LBRACKET _list_items RBRACKET
Rule 35    _list_items -> expr _list_items_cont
Rule 36    _list_items_cont -> COMMA expr _list_items_cont
Rule 37    _list_items -> empty
Rule 38    _list_items_cont -> empty
Rule 39    date -> DATE
Rule 40    datetime -> DATETIME
Rule 41    date_interval -> DATE_INTERVAL
Rule 42    datetime_interval -> DATETIME_INTERVAL
Rule 43    char -> CHAR
Rule 44    string -> STRING
Rule 45    identifier -> _identifier
Rule 46    _identifier -> UNDER_IDENTIFIER
Rule 47    _identifier -> UPPER_IDENTIFIER
Rule 48    _identifier -> LOWER_IDENTIFIER
Rule 49    enclosed_expr -> LPAREN expr RPAREN
Rule 50    expr_factor -> enclosed_expr expr_factor
Rule 51    expr_factor -> expr_factor enclosed_expr
Rule 52    enclosed_expr -> _enclosed_operator
Rule 53    _enclosed_operator -> LPAREN _st_operator RPAREN
Rule 54    infixr_operator_9 -> DOT_OPERATOR
Rule 55    infixl_operator_7 -> STAR
Rule 56    infixl_operator_7 -> SLASH
Rule 57    infixl_operator_7 -> DOUBLESLASH
Rule 58    infixl_operator_7 -> PERCENT
Rule 59    infixl_operator_6 -> PLUS
Rule 60    infixl_operator_6 -> MINUS
Rule 61    infixr_operator_2 -> COLON
Rule 62    infixl_operator_2 -> OPERATOR
Rule 63    infixl_operator_2 -> ARROW
Rule 64    infixl_operator_0 -> TICK_OPERATOR
Rule 65    _st_operator -> infixl_operator_2
Rule 66    _st_operator -> infixr_operator_2
Rule 67    _st_operator -> infixl_operator_6
Rule 68    _st_operator -> infixl_operator_7
Rule 69    _st_operator -> infixr_operator_9
Rule 70    _st_operator -> COMMA
Rule 71    number -> BASE10_INTEGER
Rule 72    number -> BASE16_INTEGER
Rule 73    number -> BASE8_INTEGER
Rule 74    number -> BASE2_INTEGER
Rule 75    number -> FLOAT
Rule 76    concrete_number -> number ANNOTATION string
Rule 77    concrete_number -> number ANNOTATION char
Rule 78    concrete_number -> number ANNOTATION identifier
Rule 79    empty -> <empty>
Rule 80    lambda_expr -> BACKSLASH patterns ARROW expr
Rule 81    pattern -> identifier
Rule 82    pattern -> literal
Rule 83    pattern -> cons_pattern
Rule 84    pattern -> list_cons_pattern
Rule 85    pattern -> tuple_cons_pattern
Rule 86    pattern -> empty_list_pattern
Rule 87    pattern -> empty_tuple_pattern
Rule 88    list_cons_pattern -> pattern COLON pattern
Rule 89    cons_pattern -> LPAREN _identifier SPACE patterns RPAREN
Rule 90    empty_list_pattern -> LBRACKET RBRACKET
Rule 91    empty_tuple_pattern -> LPAREN RPAREN
Rule 92    tuple_cons_pattern -> LPAREN patterns_comma_sep RPAREN
Rule 93    patterns -> pattern _patterns
Rule 94    patterns_comma_sep -> pattern _patterns_comma
Rule 95    _patterns -> SPACE pattern _patterns
Rule 96    _patterns_comma -> COMMA pattern _patterns_comma
Rule 97    _patterns -> empty
Rule 98    _patterns_comma -> empty
Rule 99    equation -> _identifier _patterns EQ expr
Rule 100   equation -> _enclosed_operator _patterns EQ expr
Rule 101   equations -> equation _equation_set
Rule 102   _equation_set -> PADDING equation _equation_set
Rule 103   _equation_set -> empty
Rule 104   letexpr -> KEYWORD_LET SPACE equations KEYWORD_IN SPACE st_expr
Rule 105   where_expr -> expr KEYWORD_WHERE SPACE equations
Rule 106   where_expr -> expr KEYWORD_WHERE PADDING equations
Rule 107   type_expr -> type_function_expr
Rule 108   type_expr -> type_term
Rule 109   type_function_expr -> type_term ARROW _maybe_padding type_function_expr
Rule 110   type_function_expr -> type_term
Rule 111   type_term -> type_app_expression
Rule 112   type_term -> type_factor
Rule 113   type_app_expression -> type_factor _app_args_non_empty
Rule 114   _app_args -> SPACE type_factor _app_args
Rule 115   _app_args_non_empty -> SPACE type_factor _app_args
Rule 116   _app_args -> empty
Rule 117   type_variable -> LOWER_IDENTIFIER
Rule 118   type_cons -> UPPER_IDENTIFIER
Rule 119   type_factor -> type_variable
Rule 120   type_factor -> type_cons
Rule 121   type_factor -> LPAREN _maybe_padding type_expr _maybe_padding RPAREN
Rule 122   type_factor -> LBRACKET _maybe_padding type_expr _maybe_padding RBRACKET
Rule 123   _maybe_padding -> PADDING
Rule 124   _maybe_padding -> empty
Rule 125   program -> definitions
Rule 126   definitions -> definition _definition_set
Rule 127   _definition_set -> NEWLINE definition _definition_set
Rule 128   _definition_set -> empty
Rule 129   definition -> nametype_decl
Rule 130   definition -> valuedef
Rule 131   definition -> datatype_definition
Rule 132   valuedef -> equation
Rule 133   nametype_decl -> _identifier COLON COLON st_type_expr
Rule 134   nametype_decl -> LPAREN _st_operator RPAREN COLON COLON st_type_expr
Rule 135   datatype_definition -> _datatype_lhs EQ _data_rhs
Rule 136   _datatype_lhs -> KEYWORD_DATA SPACE UPPER_IDENTIFIER _cons_params
Rule 137   _cons_params -> SPACE LOWER_IDENTIFIER _cons_params
Rule 138   _cons_params -> empty
Rule 139   _data_rhs -> data_cons _data_conses
Rule 140   _data_conses -> _maybe_padding PIPE data_cons _data_conses
Rule 141   _data_conses -> empty
Rule 142   data_cons -> _data_cons
Rule 143   _data_cons -> UPPER_IDENTIFIER _cons_args
Rule 144   _cons_args -> SPACE cons_arg _cons_args
Rule 145   _cons_args -> empty
Rule 146   cons_arg -> type_variable
Rule 147   cons_arg -> type_cons
Rule 148   cons_arg -> _cons_arg_factor
Rule 149   _cons_arg_factor -> LPAREN type_expr RPAREN
Rule 150   _cons_arg_factor -> LBRACKET type_expr RBRACKET

Terminals, with rules where they appear

ANNOTATION           : 76 77 78
ARROW                : 63 80 109
BACKSLASH            : 80
BASE10_INTEGER       : 71
BASE16_INTEGER       : 72
BASE2_INTEGER        : 74
BASE8_INTEGER        : 73
CHAR                 : 43
COLON                : 61 88 133 133 134 134
COMMA                : 36 70 96
DATE                 : 39
DATETIME             : 40
DATETIME_INTERVAL    : 42
DATE_INTERVAL        : 41
DOT_OPERATOR         : 54
DOUBLESLASH          : 57
EQ                   : 99 100 135
FLOAT                : 75
KEYWORD_CLASS        : 
KEYWORD_DATA         : 136
KEYWORD_IN           : 104
KEYWORD_INSTANCE     : 
KEYWORD_LET          : 104
KEYWORD_WHERE        : 105 106
LBRACKET             : 34 90 122 150
LOWER_IDENTIFIER     : 48 117 137
LPAREN               : 33 49 53 89 91 92 121 134 149
MINUS                : 60
NEWLINE              : 127
OPERATOR             : 62
PADDING              : 102 106 123
PERCENT              : 58
PIPE                 : 140
PLUS                 : 59
RBRACKET             : 34 90 122 150
RPAREN               : 33 49 53 89 91 92 121 134 149
SLASH                : 56
SPACE                : 1 89 95 104 104 105 114 115 136 137 144
STAR                 : 55
STRING               : 44
TICK_OPERATOR        : 64
UNDER_IDENTIFIER     : 46
UPPER_IDENTIFIER     : 47 118 136 143
error                : 

Nonterminals, with rules where they appear

_app_args            : 114 115
_app_args_non_empty  : 113
_cons_arg_factor     : 148
_cons_args           : 143 144
_cons_params         : 136 137
_data_cons           : 142
_data_conses         : 139 140
_data_rhs            : 135
_datatype_lhs        : 135
_definition_set      : 126 127
_enclosed_operator   : 52 100
_equation_set        : 101 102
_identifier          : 45 89 99 133
_list_items          : 33 34
_list_items_cont     : 35 36
_maybe_padding       : 109 121 121 122 122 140
_patterns            : 93 95 99 100
_patterns_comma      : 94 96
_st_operator         : 53 134
char                 : 28 77
concrete_number      : 26
cons_arg             : 144
cons_pattern         : 83
data_cons            : 139 140
datatype_definition  : 131
date                 : 29
date_interval        : 31
datetime             : 30
datetime_interval    : 32
definition           : 126 127
definitions          : 125
empty                : 37 38 97 98 103 116 124 128 138 141 145
empty_list_pattern   : 86
empty_tuple_pattern  : 87
enclosed_expr        : 18 50 51
equation             : 101 102 132
equations            : 104 105 106
expr                 : 12 14 35 36 49 80 99 100 105 106
expr_factor          : 1 1 2 3 50 51
expr_term0           : 12 15
expr_term1           : 10 13
expr_term2           : 8 10 11
expr_term6           : 6 8 9
expr_term7           : 4 6 7
expr_term9           : 2 4 5
identifier           : 17 78 81
infixl_operator_0    : 12
infixl_operator_2    : 8 65
infixl_operator_6    : 6 67
infixl_operator_7    : 4 68
infixr_operator_2    : 10 66
infixr_operator_9    : 2 69
lambda_expr          : 21
letexpr              : 19
list_cons_pattern    : 84
literal              : 16 82
nametype_decl        : 129
number               : 25 76 77 78
pattern              : 88 88 93 94 95 96
patterns             : 80 89
patterns_comma_sep   : 92
program              : 0
simple_list_expr     : 22
simple_tuple_expr    : 23
st_expr              : 104
st_type_expr         : 133 134
string               : 27 76
tuple_cons_pattern   : 85
type_app_expression  : 111
type_cons            : 120 147
type_expr            : 24 121 122 149 150
type_factor          : 112 113 114 115
type_function_expr   : 107 109
type_term            : 108 109 110
type_variable        : 119 146
valuedef             : 130
where_expr           : 20

Parsing method: LALR

state 0

    (0) S' -> . program
    (125) program -> . definitions
    (126) definitions -> . definition _definition_set
    (129) definition -> . nametype_decl
    (130) definition -> . valuedef
    (131) definition -> . datatype_definition
    (133) nametype_decl -> . _identifier COLON COLON st_type_expr
    (134) nametype_decl -> . LPAREN _st_operator RPAREN COLON COLON st_type_expr
    (132) valuedef -> . equation
    (135) datatype_definition -> . _datatype_lhs EQ _data_rhs
    (46) _identifier -> . UNDER_IDENTIFIER
    (47) _identifier -> . UPPER_IDENTIFIER
    (48) _identifier -> . LOWER_IDENTIFIER
    (99) equation -> . _identifier _patterns EQ expr
    (100) equation -> . _enclosed_operator _patterns EQ expr
    (136) _datatype_lhs -> . KEYWORD_DATA SPACE UPPER_IDENTIFIER _cons_params
    (53) _enclosed_operator -> . LPAREN _st_operator RPAREN

    LPAREN          shift and go to state 8
    UNDER_IDENTIFIER shift and go to state 11
    UPPER_IDENTIFIER shift and go to state 12
    LOWER_IDENTIFIER shift and go to state 13
    KEYWORD_DATA    shift and go to state 15

    program                        shift and go to state 1
    definitions                    shift and go to state 2
    definition                     shift and go to state 3
    nametype_decl                  shift and go to state 4
    valuedef                       shift and go to state 5
    datatype_definition            shift and go to state 6
    _identifier                    shift and go to state 7
    equation                       shift and go to state 9
    _datatype_lhs                  shift and go to state 10
    _enclosed_operator             shift and go to state 14

state 1

    (0) S' -> program .



state 2

    (125) program -> definitions .

    $end            reduce using rule 125 (program -> definitions .)


state 3

    (126) definitions -> definition . _definition_set
    (127) _definition_set -> . NEWLINE definition _definition_set
    (128) _definition_set -> . empty
    (79) empty -> .

    NEWLINE         shift and go to state 17
    $end            reduce using rule 79 (empty -> .)

    _definition_set                shift and go to state 16
    empty                          shift and go to state 18

state 4

    (129) definition -> nametype_decl .

    NEWLINE         reduce using rule 129 (definition -> nametype_decl .)
    $end            reduce using rule 129 (definition -> nametype_decl .)


state 5

    (130) definition -> valuedef .

    NEWLINE         reduce using rule 130 (definition -> valuedef .)
    $end            reduce using rule 130 (definition -> valuedef .)


state 6

    (131) definition -> datatype_definition .

    NEWLINE         reduce using rule 131 (definition -> datatype_definition .)
    $end            reduce using rule 131 (definition -> datatype_definition .)


state 7

    (133) nametype_decl -> _identifier . COLON COLON st_type_expr
    (99) equation -> _identifier . _patterns EQ expr
    (95) _patterns -> . SPACE pattern _patterns
    (97) _patterns -> . empty
    (79) empty -> .

    COLON           shift and go to state 19
    SPACE           shift and go to state 21
    EQ              reduce using rule 79 (empty -> .)

    _patterns                      shift and go to state 20
    empty                          shift and go to state 22

state 8

    (134) nametype_decl -> LPAREN . _st_operator RPAREN COLON COLON st_type_expr
    (53) _enclosed_operator -> LPAREN . _st_operator RPAREN
    (65) _st_operator -> . infixl_operator_2
    (66) _st_operator -> . infixr_operator_2
    (67) _st_operator -> . infixl_operator_6
    (68) _st_operator -> . infixl_operator_7
    (69) _st_operator -> . infixr_operator_9
    (70) _st_operator -> . COMMA
    (62) infixl_operator_2 -> . OPERATOR
    (63) infixl_operator_2 -> . ARROW
    (61) infixr_operator_2 -> . COLON
    (59) infixl_operator_6 -> . PLUS
    (60) infixl_operator_6 -> . MINUS
    (55) infixl_operator_7 -> . STAR
    (56) infixl_operator_7 -> . SLASH
    (57) infixl_operator_7 -> . DOUBLESLASH
    (58) infixl_operator_7 -> . PERCENT
    (54) infixr_operator_9 -> . DOT_OPERATOR

    COMMA           shift and go to state 30
    OPERATOR        shift and go to state 31
    ARROW           shift and go to state 32
    COLON           shift and go to state 24
    PLUS            shift and go to state 33
    MINUS           shift and go to state 34
    STAR            shift and go to state 35
    SLASH           shift and go to state 36
    DOUBLESLASH     shift and go to state 37
    PERCENT         shift and go to state 38
    DOT_OPERATOR    shift and go to state 39

    _st_operator                   shift and go to state 23
    infixl_operator_2              shift and go to state 25
    infixr_operator_2              shift and go to state 26
    infixl_operator_6              shift and go to state 27
    infixl_operator_7              shift and go to state 28
    infixr_operator_9              shift and go to state 29

state 9

    (132) valuedef -> equation .

    NEWLINE         reduce using rule 132 (valuedef -> equation .)
    $end            reduce using rule 132 (valuedef -> equation .)


state 10

    (135) datatype_definition -> _datatype_lhs . EQ _data_rhs

    EQ              shift and go to state 40


state 11

    (46) _identifier -> UNDER_IDENTIFIER .

    COLON           reduce using rule 46 (_identifier -> UNDER_IDENTIFIER .)
    SPACE           reduce using rule 46 (_identifier -> UNDER_IDENTIFIER .)
    EQ              reduce using rule 46 (_identifier -> UNDER_IDENTIFIER .)
    ARROW           reduce using rule 46 (_identifier -> UNDER_IDENTIFIER .)
    RPAREN          reduce using rule 46 (_identifier -> UNDER_IDENTIFIER .)
    KEYWORD_WHERE   reduce using rule 46 (_identifier -> UNDER_IDENTIFIER .)
    TICK_OPERATOR   reduce using rule 46 (_identifier -> UNDER_IDENTIFIER .)
    NEWLINE         reduce using rule 46 (_identifier -> UNDER_IDENTIFIER .)
    $end            reduce using rule 46 (_identifier -> UNDER_IDENTIFIER .)
    PADDING         reduce using rule 46 (_identifier -> UNDER_IDENTIFIER .)
    KEYWORD_IN      reduce using rule 46 (_identifier -> UNDER_IDENTIFIER .)
    DOT_OPERATOR    reduce using rule 46 (_identifier -> UNDER_IDENTIFIER .)
    LPAREN          reduce using rule 46 (_identifier -> UNDER_IDENTIFIER .)
    STAR            reduce using rule 46 (_identifier -> UNDER_IDENTIFIER .)
    SLASH           reduce using rule 46 (_identifier -> UNDER_IDENTIFIER .)
    DOUBLESLASH     reduce using rule 46 (_identifier -> UNDER_IDENTIFIER .)
    PERCENT         reduce using rule 46 (_identifier -> UNDER_IDENTIFIER .)
    PLUS            reduce using rule 46 (_identifier -> UNDER_IDENTIFIER .)
    MINUS           reduce using rule 46 (_identifier -> UNDER_IDENTIFIER .)
    OPERATOR        reduce using rule 46 (_identifier -> UNDER_IDENTIFIER .)
    COMMA           reduce using rule 46 (_identifier -> UNDER_IDENTIFIER .)
    RBRACKET        reduce using rule 46 (_identifier -> UNDER_IDENTIFIER .)


state 12

    (47) _identifier -> UPPER_IDENTIFIER .

    COLON           reduce using rule 47 (_identifier -> UPPER_IDENTIFIER .)
    SPACE           reduce using rule 47 (_identifier -> UPPER_IDENTIFIER .)
    EQ              reduce using rule 47 (_identifier -> UPPER_IDENTIFIER .)
    ARROW           reduce using rule 47 (_identifier -> UPPER_IDENTIFIER .)
    RPAREN          reduce using rule 47 (_identifier -> UPPER_IDENTIFIER .)
    KEYWORD_WHERE   reduce using rule 47 (_identifier -> UPPER_IDENTIFIER .)
    TICK_OPERATOR   reduce using rule 47 (_identifier -> UPPER_IDENTIFIER .)
    NEWLINE         reduce using rule 47 (_identifier -> UPPER_IDENTIFIER .)
    $end            reduce using rule 47 (_identifier -> UPPER_IDENTIFIER .)
    PADDING         reduce using rule 47 (_identifier -> UPPER_IDENTIFIER .)
    KEYWORD_IN      reduce using rule 47 (_identifier -> UPPER_IDENTIFIER .)
    DOT_OPERATOR    reduce using rule 47 (_identifier -> UPPER_IDENTIFIER .)
    LPAREN          reduce using rule 47 (_identifier -> UPPER_IDENTIFIER .)
    STAR            reduce using rule 47 (_identifier -> UPPER_IDENTIFIER .)
    SLASH           reduce using rule 47 (_identifier -> UPPER_IDENTIFIER .)
    DOUBLESLASH     reduce using rule 47 (_identifier -> UPPER_IDENTIFIER .)
    PERCENT         reduce using rule 47 (_identifier -> UPPER_IDENTIFIER .)
    PLUS            reduce using rule 47 (_identifier -> UPPER_IDENTIFIER .)
    MINUS           reduce using rule 47 (_identifier -> UPPER_IDENTIFIER .)
    OPERATOR        reduce using rule 47 (_identifier -> UPPER_IDENTIFIER .)
    COMMA           reduce using rule 47 (_identifier -> UPPER_IDENTIFIER .)
    RBRACKET        reduce using rule 47 (_identifier -> UPPER_IDENTIFIER .)


state 13

    (48) _identifier -> LOWER_IDENTIFIER .

    COLON           reduce using rule 48 (_identifier -> LOWER_IDENTIFIER .)
    SPACE           reduce using rule 48 (_identifier -> LOWER_IDENTIFIER .)
    EQ              reduce using rule 48 (_identifier -> LOWER_IDENTIFIER .)
    ARROW           reduce using rule 48 (_identifier -> LOWER_IDENTIFIER .)
    RPAREN          reduce using rule 48 (_identifier -> LOWER_IDENTIFIER .)
    KEYWORD_WHERE   reduce using rule 48 (_identifier -> LOWER_IDENTIFIER .)
    TICK_OPERATOR   reduce using rule 48 (_identifier -> LOWER_IDENTIFIER .)
    NEWLINE         reduce using rule 48 (_identifier -> LOWER_IDENTIFIER .)
    $end            reduce using rule 48 (_identifier -> LOWER_IDENTIFIER .)
    PADDING         reduce using rule 48 (_identifier -> LOWER_IDENTIFIER .)
    KEYWORD_IN      reduce using rule 48 (_identifier -> LOWER_IDENTIFIER .)
    DOT_OPERATOR    reduce using rule 48 (_identifier -> LOWER_IDENTIFIER .)
    LPAREN          reduce using rule 48 (_identifier -> LOWER_IDENTIFIER .)
    STAR            reduce using rule 48 (_identifier -> LOWER_IDENTIFIER .)
    SLASH           reduce using rule 48 (_identifier -> LOWER_IDENTIFIER .)
    DOUBLESLASH     reduce using rule 48 (_identifier -> LOWER_IDENTIFIER .)
    PERCENT         reduce using rule 48 (_identifier -> LOWER_IDENTIFIER .)
    PLUS            reduce using rule 48 (_identifier -> LOWER_IDENTIFIER .)
    MINUS           reduce using rule 48 (_identifier -> LOWER_IDENTIFIER .)
    OPERATOR        reduce using rule 48 (_identifier -> LOWER_IDENTIFIER .)
    COMMA           reduce using rule 48 (_identifier -> LOWER_IDENTIFIER .)
    RBRACKET        reduce using rule 48 (_identifier -> LOWER_IDENTIFIER .)


state 14

    (100) equation -> _enclosed_operator . _patterns EQ expr
    (95) _patterns -> . SPACE pattern _patterns
    (97) _patterns -> . empty
    (79) empty -> .

    SPACE           shift and go to state 21
    EQ              reduce using rule 79 (empty -> .)

    _patterns                      shift and go to state 41
    empty                          shift and go to state 22

state 15

    (136) _datatype_lhs -> KEYWORD_DATA . SPACE UPPER_IDENTIFIER _cons_params

    SPACE           shift and go to state 42


state 16

    (126) definitions -> definition _definition_set .

    $end            reduce using rule 126 (definitions -> definition _definition_set .)


state 17

    (127) _definition_set -> NEWLINE . definition _definition_set
    (129) definition -> . nametype_decl
    (130) definition -> . valuedef
    (131) definition -> . datatype_definition
    (133) nametype_decl -> . _identifier COLON COLON st_type_expr
    (134) nametype_decl -> . LPAREN _st_operator RPAREN COLON COLON st_type_expr
    (132) valuedef -> . equation
    (135) datatype_definition -> . _datatype_lhs EQ _data_rhs
    (46) _identifier -> . UNDER_IDENTIFIER
    (47) _identifier -> . UPPER_IDENTIFIER
    (48) _identifier -> . LOWER_IDENTIFIER
    (99) equation -> . _identifier _patterns EQ expr
    (100) equation -> . _enclosed_operator _patterns EQ expr
    (136) _datatype_lhs -> . KEYWORD_DATA SPACE UPPER_IDENTIFIER _cons_params
    (53) _enclosed_operator -> . LPAREN _st_operator RPAREN

    LPAREN          shift and go to state 8
    UNDER_IDENTIFIER shift and go to state 11
    UPPER_IDENTIFIER shift and go to state 12
    LOWER_IDENTIFIER shift and go to state 13
    KEYWORD_DATA    shift and go to state 15

    definition                     shift and go to state 43
    nametype_decl                  shift and go to state 4
    valuedef                       shift and go to state 5
    datatype_definition            shift and go to state 6
    _identifier                    shift and go to state 7
    equation                       shift and go to state 9
    _datatype_lhs                  shift and go to state 10
    _enclosed_operator             shift and go to state 14

state 18

    (128) _definition_set -> empty .

    $end            reduce using rule 128 (_definition_set -> empty .)


state 19

    (133) nametype_decl -> _identifier COLON . COLON st_type_expr

    COLON           shift and go to state 44


state 20

    (99) equation -> _identifier _patterns . EQ expr

    EQ              shift and go to state 45


state 21

    (95) _patterns -> SPACE . pattern _patterns
    (81) pattern -> . identifier
    (82) pattern -> . literal
    (83) pattern -> . cons_pattern
    (84) pattern -> . list_cons_pattern
    (85) pattern -> . tuple_cons_pattern
    (86) pattern -> . empty_list_pattern
    (87) pattern -> . empty_tuple_pattern
    (45) identifier -> . _identifier
    (25) literal -> . number
    (26) literal -> . concrete_number
    (27) literal -> . string
    (28) literal -> . char
    (29) literal -> . date
    (30) literal -> . datetime
    (31) literal -> . date_interval
    (32) literal -> . datetime_interval
    (89) cons_pattern -> . LPAREN _identifier SPACE patterns RPAREN
    (88) list_cons_pattern -> . pattern COLON pattern
    (92) tuple_cons_pattern -> . LPAREN patterns_comma_sep RPAREN
    (90) empty_list_pattern -> . LBRACKET RBRACKET
    (91) empty_tuple_pattern -> . LPAREN RPAREN
    (46) _identifier -> . UNDER_IDENTIFIER
    (47) _identifier -> . UPPER_IDENTIFIER
    (48) _identifier -> . LOWER_IDENTIFIER
    (71) number -> . BASE10_INTEGER
    (72) number -> . BASE16_INTEGER
    (73) number -> . BASE8_INTEGER
    (74) number -> . BASE2_INTEGER
    (75) number -> . FLOAT
    (76) concrete_number -> . number ANNOTATION string
    (77) concrete_number -> . number ANNOTATION char
    (78) concrete_number -> . number ANNOTATION identifier
    (44) string -> . STRING
    (43) char -> . CHAR
    (39) date -> . DATE
    (40) datetime -> . DATETIME
    (41) date_interval -> . DATE_INTERVAL
    (42) datetime_interval -> . DATETIME_INTERVAL

    LPAREN          shift and go to state 63
    LBRACKET        shift and go to state 64
    UNDER_IDENTIFIER shift and go to state 11
    UPPER_IDENTIFIER shift and go to state 12
    LOWER_IDENTIFIER shift and go to state 13
    BASE10_INTEGER  shift and go to state 65
    BASE16_INTEGER  shift and go to state 66
    BASE8_INTEGER   shift and go to state 67
    BASE2_INTEGER   shift and go to state 68
    FLOAT           shift and go to state 69
    STRING          shift and go to state 70
    CHAR            shift and go to state 71
    DATE            shift and go to state 72
    DATETIME        shift and go to state 73
    DATE_INTERVAL   shift and go to state 74
    DATETIME_INTERVAL shift and go to state 75

    pattern                        shift and go to state 46
    identifier                     shift and go to state 47
    literal                        shift and go to state 48
    cons_pattern                   shift and go to state 49
    list_cons_pattern              shift and go to state 50
    tuple_cons_pattern             shift and go to state 51
    empty_list_pattern             shift and go to state 52
    empty_tuple_pattern            shift and go to state 53
    _identifier                    shift and go to state 54
    number                         shift and go to state 55
    concrete_number                shift and go to state 56
    string                         shift and go to state 57
    char                           shift and go to state 58
    date                           shift and go to state 59
    datetime                       shift and go to state 60
    date_interval                  shift and go to state 61
    datetime_interval              shift and go to state 62

state 22

    (97) _patterns -> empty .

    EQ              reduce using rule 97 (_patterns -> empty .)
    ARROW           reduce using rule 97 (_patterns -> empty .)
    RPAREN          reduce using rule 97 (_patterns -> empty .)


state 23

    (134) nametype_decl -> LPAREN _st_operator . RPAREN COLON COLON st_type_expr
    (53) _enclosed_operator -> LPAREN _st_operator . RPAREN

    RPAREN          shift and go to state 76


state 24

    (61) infixr_operator_2 -> COLON .

    RPAREN          reduce using rule 61 (infixr_operator_2 -> COLON .)
    LPAREN          reduce using rule 61 (infixr_operator_2 -> COLON .)
    KEYWORD_LET     reduce using rule 61 (infixr_operator_2 -> COLON .)
    BACKSLASH       reduce using rule 61 (infixr_operator_2 -> COLON .)
    LBRACKET        reduce using rule 61 (infixr_operator_2 -> COLON .)
    BASE10_INTEGER  reduce using rule 61 (infixr_operator_2 -> COLON .)
    BASE16_INTEGER  reduce using rule 61 (infixr_operator_2 -> COLON .)
    BASE8_INTEGER   reduce using rule 61 (infixr_operator_2 -> COLON .)
    BASE2_INTEGER   reduce using rule 61 (infixr_operator_2 -> COLON .)
    FLOAT           reduce using rule 61 (infixr_operator_2 -> COLON .)
    STRING          reduce using rule 61 (infixr_operator_2 -> COLON .)
    CHAR            reduce using rule 61 (infixr_operator_2 -> COLON .)
    DATE            reduce using rule 61 (infixr_operator_2 -> COLON .)
    DATETIME        reduce using rule 61 (infixr_operator_2 -> COLON .)
    DATE_INTERVAL   reduce using rule 61 (infixr_operator_2 -> COLON .)
    DATETIME_INTERVAL reduce using rule 61 (infixr_operator_2 -> COLON .)
    UNDER_IDENTIFIER reduce using rule 61 (infixr_operator_2 -> COLON .)
    UPPER_IDENTIFIER reduce using rule 61 (infixr_operator_2 -> COLON .)
    LOWER_IDENTIFIER reduce using rule 61 (infixr_operator_2 -> COLON .)


state 25

    (65) _st_operator -> infixl_operator_2 .

    RPAREN          reduce using rule 65 (_st_operator -> infixl_operator_2 .)


state 26

    (66) _st_operator -> infixr_operator_2 .

    RPAREN          reduce using rule 66 (_st_operator -> infixr_operator_2 .)


state 27

    (67) _st_operator -> infixl_operator_6 .

    RPAREN          reduce using rule 67 (_st_operator -> infixl_operator_6 .)


state 28

    (68) _st_operator -> infixl_operator_7 .

    RPAREN          reduce using rule 68 (_st_operator -> infixl_operator_7 .)


state 29

    (69) _st_operator -> infixr_operator_9 .

    RPAREN          reduce using rule 69 (_st_operator -> infixr_operator_9 .)


state 30

    (70) _st_operator -> COMMA .

    RPAREN          reduce using rule 70 (_st_operator -> COMMA .)


state 31

    (62) infixl_operator_2 -> OPERATOR .
